--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,21 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="MEYPARK - Kiosco de parquímetro físico con funcionalidades avanzadas de accesibilidad">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="mi_nuevo_proyecto">
+  <meta name="apple-mobile-web-app-title" content="MEYPARK">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>MEYPARK</title>
+  <!-- Viewport para responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <title>MEYPARK - Kiosco de Parquímetro</title>
   <link rel="manifest" href="manifest.json">
   
   <style>
